# Stock_Market_IBEX

./: .gitignore  README.md  analysis.py  download_data.sh  get_stocks.py  pyproject.toml
src/ibex/: __init__.py  cli.py  config.py  data_fetch.py  io.py  metrics.py  processing.py
src/stock_market_ibex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
