[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-ibex"
version = "0.1.0"
description = "IBEX market data pipeline and metrics with yfinance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "yfinance>=0.2.40",
]

[project.scripts]
ibex-analyze = "ibex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
